payment/k8s/aws/traffic/virtual-service-payment-80-20.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment-service-vs
spec:
  hosts:
    - payment-service
  http:
  - route:
    - destination:
        host: payment-service
        subset: v1
      weight: 80
    - destination:
        host: payment-service
        subset: v2
      weight: 20
